# tcpclips60

./: .gitignore  CMakeLists.txt  readme.MD  start.sh  start_planning.sh  tcpCLIPS60_import.cmake
clips60/: CMakeLists.txt
clipsclient/: CMakeLists.txt
clipsclient/src/: clipsclient.cpp
clipscontrol/: CMakeLists.txt
clipscontrol/src/: main.cpp  ncurseswin.cpp  ncurseswin.h
clipsserver/: CMakeLists.txt
clipsserver/src/: main.cpp  server.cpp  server.h  session.cpp  session.h  utils.h
clipswrapper/: CMakeLists.txt
clipswrapper/src/: clipswrapper.cpp
include/clipsclient/: clipsclient.h  reply.h  request.h
include/clipswrapper/: clipswrapper.h  queryrouter.h
tests/: CMakeLists.txt
tests/pytest/: test.py
tests/simple/: main.cpp
